syntax = "proto3";

package proto;

option go_package = "TransportManagementService/proto;proto";

service TransportService {
  rpc CreateTransport (CreateTransportRequest) returns (CreateTransportResponse);
  // rpc UpdateTransport (UpdateTransportRequest) returns (UpdateTransportResponse);
  // rpc GetTransportInfo (GetTransportInfoRequest) returns (GetTransportInfoResponse);
  // rpc GetTransportLogsInfo (GetTransportLogsInfoRequest) returns (GetTransportLogsInfoResponse);
}

message CreateTransportRequest {
  string number = 1;
  int32 type_id = 2;
  int32 is_active = 3;
  int32 current_driver_id = 4;
}

message CreateTransportResponse {
  bool success = 1;
  int64 transport_id = 2;
}

// message UpdateTransportRequest {
//   int32 is_active = 1;
//   int32 current_driver_id = 2;
// }

// message UpdateTransportResponse {
//   bool success = 1;
// }

// message GetTransportInfoRequest {
//   int32 transport_id = 1;
// }

// message GetTransportInfoResponse {
//   bool success = 1;
// }

// message GetTransportLogsInfoRequest {
//   int32 transport_id = 1;
// }

// message GetTransportLogsInfoResponse {
//   bool success = 1;
// }